# gi-tract

./: .flake8  .gitattributes  .gitignore  3d_train.py  README.md  evaluate.py  gi_tract.py  hyperparam_train.py  predict.py  pyproject.toml  submission.ipynb  train.py
eda/: 3d_stack.py  class_distributions.py  predict.py  visualisations.py
model_instances/: v0.pth
model_instances/v0/: conda.yaml
model_instances/v0/model/: MLmodel  requirements.txt
model_instances/v0/model/data/: pickle_module_info.txt
models/: unet.py
tests/: test_extract.py  test_unet.py
utils/: dataset.py  extract.py  extract_3d.py  graph_vis.py  losses.py  metrics.py  nifti_converter.py  rle.py  upload_models.py
