[tool.poetry]
name = "gi-tract"
version = "0.1.0"
description = "Kaggle GI Tract Segmentation"
authors = ["dogeplusplus <albertswchung@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.5"
torch = "^1.11.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
scipy = "^1.8.0"
monai = "^0.8.1"
torchmetrics = "^0.8.2"
einops = "^0.4.1"
mlflow = "^1.25.1"
plotly = "^5.8.0"
jupyter = "^1.0.0"
torchviz = "^0.0.2"
segmentation-models-pytorch = "^0.2.1"
ray = {extras = ["tune"], version = "^1.12.0"}
kaggle = "^1.5.12"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"
jedi = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
